// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #14163c;
  fill: #14163c;
}

.emotion-0:focus {
  outline-style: dashed;
}

<p
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</p>
`;

exports[`composition hook should return with Link props 1`] = `
Object {
  "className": "css-1x68ag css-1hq7qsz css-1j9m13w",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #14163c;
  fill: #14163c;
}

.emotion-0:focus {
  outline-style: dashed;
}

<div
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</div>
`;

exports[`overrides Link.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: red;
}

.emotion-0 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #14163c;
  fill: #14163c;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 {
  background-color: red;
}

<a
  class="emotion-0 emotion-1 emotion-2"
>
  hello world
</a>
`;

exports[`overrides Link.hover should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #14163c;
  fill: #14163c;
}

.emotion-0:hover {
  background-color: red;
}

.emotion-0:focus {
  outline-style: dashed;
}

<a
  class="emotion-0 emotion-1 emotion-2"
>
  hello world
</a>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #14163c;
  fill: #14163c;
}

.emotion-0:focus {
  outline-style: dashed;
}

<a
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</a>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #14163c;
  fill: #14163c;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-2.emotion-2 {
  color: #444bc9;
}

<a
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</a>
`;

exports[`theming Link.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #14163c;
  fill: #14163c;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 {
  background-color: red;
}

<a
  class="emotion-0 emotion-1 emotion-2"
>
  hello world
</a>
`;

exports[`theming Link.hover should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #14163c;
  fill: #14163c;
}

.emotion-0:hover {
  background-color: red;
}

.emotion-0:focus {
  outline-style: dashed;
}

<a
  class="emotion-0 emotion-1 emotion-2"
>
  hello world
</a>
`;
